--- a/trunk/tasma/package-manager/src/packagemanager.desktop
+++ b/trunk/tasma/package-manager/src/packagemanager.desktop
@@ -15,7 +15,7 @@ Comment[tr]=PiSi Paket Yöneticisi Kullanıcı Grafik Arayüzü
 Comment[nl]=PiSi Pakkermanager grafische gebruikersinterface
 Comment[es]=Interfaz gráfico de Administrador de Paquetes PiSi
 Comment[de]=PiSi Paket-Manager grafische Benutzeroberfläche
-Comment[pt_BR]=Interface do Usuário Gráfica do Gerenciador de Pacotes PiSi
+Comment[pt_BR]=Interface Gráfica do Usuário do Gerenciador de Pacotes PiSi
 Icon=package-manager
 Type=Application
 Exec=package-manager
