--- a/trunk/tasma/package-manager/src/tasmamanager.desktop
+++ b/trunk/tasma/package-manager/src/tasmamanager.desktop
@@ -5,7 +5,7 @@ Name[tr]=Program Ekle, Güncelle veya Kaldır
 Name[nl]=Toevoegen, bijwerken of verwijderen programma's
 Name[es]=Agregar, Actualizar o Remover Programas
 Name[de]=Programme hinzufügen, aktualisieren oder entfernen
-Name[pt_BR]=Gerenciador de Pacotes
+Name[pt_BR]=Adicionar, Atualizar ou Remover Programas
 Comment=PiSi Package Manager Graphical User Interface
 Comment[en]=PiSi Package Manager Graphical User Interface
 Comment[tr]=PiSi Paket Yöneticisi Kullanıcı Grafik Arayüzü
