--- a/trunk/tasma/tasma/applnk/desktop/tasmadesktop.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmadesktop.desktop
@@ -15,14 +15,14 @@ Name[tr]=Çoklu Masaüstü
 Name[nl]=Virtuele bureaubladen
 Name[es]=Escritorios múltiples
 Name[de]=Mehrere Arbeitsflächen
-Name[pt_BR]=Múltiplas Áreas de Trabalho
+Name[pt_BR]=Áreas de Trabalho Múltiplas
 
 Comment=You can configure how many virtual desktops there are.
 Comment[tr]=Kaç görsel masaüstüne sahip olacağınızı buradan yapılandırabilirsiniz.
 Comment[nl]=U kunt hier bepalen hoeveel virtuele bureaubladen u wilt gebruiken.
 Comment[es]=Puede configurar la cantidad de escritorios virtuales.
-Comments[de]=Sie können die Anzahl der virtuellen Arbetsflächen festlegen.
-Comment[pt_BR]=Você pode configurar a quantidade de áreas de trabalho virtuais.
+Comment[de]=Sie können die Anzahl der virtuellen Arbetsflächen festlegen.
+Comment[pt_BR]=Você pode configurar a quantidade existente de áreas de trabalho virtuais.
 
 Keywords=desktop,desktops,number,virtual desktop
 Keywords[tr]=masaüstü,isim,masaüstü sayısı,sanal masaüstü
