--- a/trunk/tasma/tasma/applnk/desktop/tasmakeys.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmakeys.desktop
@@ -22,7 +22,7 @@ Comment[tr]=Tuş bağıntılarının yapılandırılması
 Comment[nl]=Instellingen voor sneltoetsen
 Comment[es]=Configuración de teclas rápidas
 Comment[de]=Konfiguration der Tastenkombinationen
-Comment[pt_BR]=Configuração teclas de atalho
+Comment[pt_BR]=Configuração das teclas de atalho
 
 Keywords=Keys,Global key bindings,Key scheme,Key bindings,shortcuts,application shortcuts
 Keywords[tr]=tuşlar,Küresel Tuş bağlantıları,Tuş planı,tuş bağlamaları,kısayollar,uygulama kısayolları
