--- a/trunk/tasma/tasma/applnk/desktop/tasmakwindecoration.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmakwindecoration.desktop
@@ -14,7 +14,7 @@ Name[tr]=Pencere Dekorasyonları
 Name[nl]=Vensterdecoraties
 Name[es]=Decoraciones de Ventanas
 Name[de]=Fensterdekoration
-Name[pt_BR]=Decorações de Janelas
+Name[pt_BR]=Decorações das Janelas
 
 Comment=Configure the look and feel of window titles
 Comment[tr]=Pencere başlıklarını görünümlerini yapılandır
