--- a/trunk/tasma/tasma/modules/tasmatv/CMakeLists.txt
+++ b/trunk/tasma/tasma/modules/tasmatv/CMakeLists.txt
@@ -14,7 +14,7 @@ KDE3_AUTOMOC(${tasmatv_sources})
 KDE3_ADD_UI_FILES(tasmatv_sources tvconfigui.ui)
 
 KDE3_ADD_KPART(kcm_tasmatv ${tasmatv_sources})
-TARGET_LINK_LIBRARIES(kcm_tasmatv ${QT_AND_KDECORE_LIBS} kdeui pci)
+TARGET_LINK_LIBRARIES(kcm_tasmatv ${QT_QT_LIBRARY} kdecore kdeui pci)
 
 INSTALL_TARGETS(/lib/kde3 kcm_tasmatv)
 INSTALL_FILES(/share/applications/kde/ tasmatv.desktop)
