--- a/trunk/planet/planet.pardus.org.tr/config.ini
+++ b/trunk/planet/planet.pardus.org.tr/config.ini
@@ -53,3 +53,7 @@ face = http://photos1.blogger.com/blogger/5018/1604/320/eu%20de%20novo.jpg
 
 [http://beboptech.blogspot.com/]
 name =  Amine Chadly
+
+[http://pardustimes.blogspot.com/feeds/posts/default]
+name = Pardus Times
+face = http://cekirdek.pardus.org.tr/~faik/images/fyu.png
