--- a/trunk/planet/gezegen.pardus.org.tr/config.ini
+++ b/trunk/planet/gezegen.pardus.org.tr/config.ini
@@ -125,3 +125,6 @@ name=Zemberek NLP
 
 [http://qwzxcv.wordpress.com/tag/pardus/feed]
 name=Eren Türkay
+
+[http://talat.uyarer.com/?feed=rss2]
+name=Talat Uyarer
