--- a/trunk/tasma/tasma/applnk/desktop/tasmaarts.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmaarts.desktop
@@ -17,6 +17,7 @@ Name[nl]=Geluidssysteem
 Name[es]=Sonido
 Name[de]=Sound-System
 Name[pt_BR]=Sistema de Som
+Name[fr]=Son
 
 Comment=Sound System Configuration
 Comment[tr]=Ses Sistemi Yapılandırması
@@ -24,6 +25,7 @@ Comment[nl]=Geluidssysteem instellen
 Comment[es]=Configuración de Sonido
 Comment[de]=Sound-System Konfiguration
 Comment[pt_BR]=Configuração do Sistema de Som
+Comment[fr]=Configuration du Son
 
 Keywords=aRts,Sound Server,artsd,Audio,Sound,startup,network transparency,transparency,priority,duplex,full duplex,response time,Mixer,Volume,KMix,Mix,login,MIDI,synthesizer,music
 Keywords[tr]=aRts,Ses Sunucu,artsd,Ses,Ses,Başlangıç,ağ geçirgenliği,geçirgenlik,öncelik,dubleks,tam dubleks,karşılık süresi,MIDI,karıştırıcı,Kmix
@@ -31,4 +33,5 @@ Keywords[nl]=aRts,sound server,artsd,audio,sound,geluidsserver,geluid,opstarten,
 Keywords[es]=aRts,servidor de sonido,artsd,audio,inicio,transparencia de red,transparencia,prioridad,duplex,full duplex,tiempo de respuesta,Mezclador,Volumen,KMix,Mix,login,MIDI,sintetizador,musica
 Keywords[de]=aRts,Sound-Server,artsd,Audio,Sound,Autostart,Netzwerk-Durchlässigkeit,Durchlässigkeit,Priorität,duplex,vollduplex,Reaktionszeit,Lautstärkeeinstellung,Lautstärke,KMix,Mix,anmelden,MIDI,Synthesizer,Musik
 Keywords[pt_BR]=aRts,servidor de som,artsd,Áudio,Som,inicialização,transparência da rede,transparência,prioridade,duplex,full duplex,tempo de resposta,Mixer,Volume,KMix,Mix,login,MIDI,sintetizador,música
+Keywords[fr]=aRts,serveur de son,artsd,Audio,Son, démarrage,transparence réseau,transparence,priorité,duplex,full duplex,temps de réponse,Mixer,Volume,KMix,Mix,login,MIDI,synthétiseur,musique
 Categories=Qt;KDE;X-KDE-settings-sound;X-KDE-tasma-sound
