--- a/trunk/tasma/tasma/applnk/desktop/tasmacomponentchooser.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmacomponentchooser.desktop
@@ -15,6 +15,7 @@ Name[nl]=Componentenkiezer
 Name[es]=Selector de Componentes
 Name[de]=Komponentwähler
 Name[pt_BR]=Seletor de Componentes
+Name[fr]=Sélectionneur de composant
 
 Comment=Choose the default components for various services
 Comment[tr]=Çeşitli servisler için öntanımlı bileşenleri seçin
@@ -22,6 +23,7 @@ Comment[nl]=Kies de standaardcomponenten voor diverse services
 Comment[es]=Eliga los componentes por defecto para varios servicios
 Comment[de]=Standardkomponente für verschiedene Dienste auswählen
 Comment[pt_BR]=Selecionar os componentes padrões para vários serviços
+Comment[fr]=Choisir les composants par défaut pour différents services.
 
 Keywords=components,component chooser,resources, email client, terminal emulator
 Keywords[tr]=bileşenler,bileşen seçici,kaynaklar,e-posta istemcisi,terminal emülasyonu
@@ -29,5 +31,6 @@ Keywords[nl]=componentenkiezer,gegevensbronnen,e-mailprogramma,terminal
 Keywords[es]=componentes,Selector de componentes,recursos,cliente email,emulador de terminal
 Keywords[de]=Komponente,Komponentwähler,Quellen,E-Mail-Programm,Terminal-Emulator
 Keywords[pt_BR]=componentes,seletor de componente,recursos,cliente de email,emulador de terminal
+Keywords[fr]=composants,sélectionneur de composants,ressources,client de mail,émulateur de terminal
 
 Categories=Qt;KDE;X-KDE-settings-components;X-KDE-tasma-desktop
