--- a/trunk/tasma/tasma/applnk/desktop/tasmadesktop.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmadesktop.desktop
@@ -16,6 +16,7 @@ Name[nl]=Virtuele bureaubladen
 Name[es]=Escritorios múltiples
 Name[de]=Mehrere Arbeitsflächen
 Name[pt_BR]=Áreas de Trabalho Múltiplas
+Name[fr]=Bureaux multiples
 
 Comment=You can configure how many virtual desktops there are.
 Comment[tr]=Kaç görsel masaüstüne sahip olacağınızı buradan yapılandırabilirsiniz.
@@ -23,6 +24,7 @@ Comment[nl]=U kunt hier bepalen hoeveel virtuele bureaubladen u wilt gebruiken.
 Comment[es]=Puede configurar la cantidad de escritorios virtuales.
 Comment[de]=Sie können die Anzahl der virtuellen Arbetsflächen festlegen.
 Comment[pt_BR]=Você pode configurar a quantidade existente de áreas de trabalho virtuais.
+Comment[fr]=Vous pouvez configurer le nombre de bureaux virtuels.
 
 Keywords=desktop,desktops,number,virtual desktop
 Keywords[tr]=masaüstü,isim,masaüstü sayısı,sanal masaüstü
@@ -30,5 +32,6 @@ Keywords[nl]=desktop,bureaublad,bureaubladen,naam van bureaublad,nummer,bureaubl
 Keywords[es]=escritorio,escritorios,número,escritorio virtual
 Keywords[de]=Arbeitsfläche,Arbeitsflächen,Anzahl,virtuelle Arbeitsfläche
 Keywords[pt_BR]=área de trabalho,áreas de trabalho,número,área de trabalho virtual
+Keywords[fr]=bureau,bureaux,nombre,bureau virtuel
 
 Categories=Qt;KDE;X-KDE-settings-desktop;X-KDE-tasma-desktop
