--- a/trunk/tasma/tasma/applnk/desktop/tasmafonts.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmafonts.desktop
@@ -16,6 +16,7 @@ Name[nl]=Lettertypen
 Name[es]=Fuentes
 Name[de]=Schriftarten
 Name[pt_BR]=Fontes
+Name[fr]=Fontes
 
 Comment=Font settings
 Comment[tr]=Yazıtipi ayarları
@@ -23,6 +24,7 @@ Comment[nl]=Lettertypeninstellingen
 Comment[es]=Configuración de Fuentes
 Comment[de]=Schriftarteinstellungen
 Comment[pt_BR]=Configurações de fontes
+Comment[fr]=Configuration des Fontes
 
 Keywords=fonts,font size,styles,charsets,character sets,panel,kicker,control panel,desktops,FileManager,Toolbars,Menu,Window Title,Title
 Keywords[tr]=yazıtipleri,yazı boyutu,stil,karakter kümesi,panel,kicker,denetim masası,masaüstü,masaüstleri,Araç Çubuğu,Menü,Pencere Başlığı,Başlık
@@ -30,5 +32,6 @@ Keywords[nl]=fonts,font,letters,lettertypen,lettertypes,tekenset,tekenverzamelin
 Keywords[es]=fuentes,tamaño de fuentes,estilos,juegos de caracteres,panel,kicker,panel de control,escritorios,Administrador de Archivos,Barras de Herramientas,Menu,Título de Ventana,Título
 Keywords[de]=Schriftarten,Schriftgrad,Stile,Zeichenkodierung,Leiste,Kicker,Kontrollleiste,Arbeitsflächen,DateiManager,Symbolleiste,Menü,Fenstertitel,Titel
 Keywords[pt_BR]=fontes,tamanho de fontes,estilos,conjunto de caracteres,painel,kicker,painel de controle,áreas de trabalho,Gerenciador de Arquivos,Barras de Ferramentas,Menu,Título da Janela,Título
+Keywords[fr]=fontes,taille de fonte,styles,jeux de caractères,panneau,kicker,panneau de configuration,bureaux,Gestionnaire de fichier,Barre d'outils,Menu,Titre de fenêtre,Titre
 
 Categories=Qt;KDE;X-KDE-settings-looknfeel;X-KDE-tasma-looknfeel
