--- a/trunk/tasma/tasma/applnk/desktop/tasmakcm_useraccount.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmakcm_useraccount.desktop
@@ -12,6 +12,7 @@ Name[nl]=Wachtwoord en gebruikerbeheer
 Name[es]=Contraseña & Cuenta de Usuario
 Name[de]=Passwort & Benutzerkonto
 Name[pt_BR]=Senha & Conta de Usuário
+Name[fr]=Mots de passes & Comptes Utilisateur
 
 Keywords=password;email;name;organization;realname;login image;face; echo mode;
 Keywords[tr]=parola,e-posta,isim,gerçek isim,giriş resmi,yüz
@@ -19,6 +20,7 @@ Keywords[nl]=wachtwoord,e-mail,organisatie,naam,login,aanmelden,afbeelding,gezic
 Keywords[es]=contraseña,email,nombre,organización,nombre real,imagen de login,cara,modo de echo
 Keywords[de]=Passwort;E-Mail;name;Organisation;Vollständiger name;Anmeldebild;Oberfläche;Echomodus;
 Keywords[pt_BR]=senha,email,nome,organização,nome real,imagem do login,face,modo eco
+Keywords[fr]=mot de passe,email,nom,organisation,nom réel,image de connection,face,mode d'affichage
 
 Comment=User information such as password, name and email
 Comment[tr]=Parola, isim ve e-posta gibi kullanıcı bilgisi
@@ -26,5 +28,6 @@ Comment[nl]=Gebruikerinformatie zoals wachtwoord, naam en e-mailadres
 Comment[es]=Información de usuario: contraseña, nombre, email, etc.
 Comment[de]=Benutzerinformationen wie Passwort, Name und E-Mail
 Comment[pt_BR]=Informações do usuário: senha, nome, email, etc.
+Comment[fr]=Informations concernant l'utilisateur tel son mot de passe, son nom et son adresse mail
 
 Categories=QT;KDE;X-KDE-settings-security;X-KDE-tasma-useraccount
