--- a/trunk/tasma/tasma/applnk/desktop/tasmakcmnotify.desktop
+++ b/trunk/tasma/tasma/applnk/desktop/tasmakcmnotify.desktop
@@ -15,6 +15,7 @@ Name[nl]=Systeemnotificaties
 Name[es]=Notificaciones del Sistema
 Name[de]=Systemmeldungen
 Name[pt_BR]=Notificações do Sistema
+Name[fr]=Notifications système
 
 Comment=System Notification Configuration
 Comment[tr]=Sistem Bildirimi Yapılandırması
@@ -22,6 +23,7 @@ Comment[nl]=Instellingen van de systeemnotificatie
 Comment[es]=Configuración de notificaciones del sistema
 Comment[de]=Systemmeldung Konfiguration
 Comment[pt_BR]=Configuração das Notificações do Sistema
+Comment[fr]=Configuration des notifications système
 
 Keywords=System sounds,Audio,Sound,Notify,Alerts,Notification
 Keywords[tr]=Sistem sesleri,Ses,Bildir,Alarmlar,Bildirme
@@ -29,5 +31,6 @@ Keywords[nl]=systeemgeluiden,audio,geluid,waarschuwingen,geluidssignaal,notifica
 Keywords[es]=Sonidos del sistema,Audio,Sonido,Notificación,Alertas,Notificar
 Keywords[de]=System-Sounds,Audio,Sound,Melden,Alarmsignale,Meldung,
 Keywords[pt_BR]=Sons do sistema,Áudio,Som,Notificar,Alertas,Notificação
+Keywords[fr]=Son système,Audion,Son,Notifier,Alertes,Notification
 
 Categories=Qt;KDE;X-KDE-settings-sound;X-KDE-tasma-sound
